6 October 2014: Wouter
	- Fix #614: man page variable substitution bug.
6 October 2014: Willem
	- Whitespaces after $ORIGIN are not part of the origin dname (ldns).
	- $TTL's value starts at position 5 (ldns).

1 October 2014: Wouter
	- fix #613: Allow tab ws in var length last rdfs (in ldns str2wire).

29 September 2014: Wouter
	- Fix #612: create service with service.conf in present directory and
	  auto load it.
	- Fix for mingw compile openssl ranlib.

25 September 2014: Wouter
	- updated configure and aclocal with newer autoconf 1.13.

22 September 2014: Wouter
	- Fix swig and python examples for Python 3.x.
	- Fix for mingw compile with openssl-1.0.1i.

19 September 2014: Wouter
	- improve python configuration detection to build on Fedora 22.

18 September 2014: Wouter
	- patches to also build with Python 3.x (from Pavel Simerda).

16 September 2014: Wouter
	- Fix tcp timer waiting list removal code.
	- iana portlist update.
	- Updated the TCP_BACLOG from 5 to 256, so that the tcp accept queue
	  is longer and more tcp connections can be handled.

15 September 2014: Wouter
	- Fix unit test for CDS typecode.

5 September 2014: Wouter
	- type CDS and CDNSKEY types in sldns.

25 August 2014: Wouter
	- Fixup checklock code for log lock and its mutual initialization
	  dependency.
	- iana portlist update.
	- Removed necessity for pkg-config from the dnstap.m4, new are
	  the --with-libfstrm and --with-protobuf-c configure options.

19 August 2014: Wouter
	- Update unbound manpage with more explanation (from Florian Obser).

18 August 2014: Wouter
	- Fix #603: unbound-checkconf -o <option> should skip verification
	  checks.
	- iana portlist update.
	- Fixup doc/unbound.doxygen to remove obsolete 1.8.7 settings.

5 August 2014: Wouter
	- dnstap support, with a patch from Farsight Security, written by
	  Robert Edmonds. The --enable-dnstap needs libfstrm and protobuf-c.
	  It is BSD licensed (see dnstap/dnstap.c).