@@ -1,3 +1,6 @@
+10 October 2014: Wouter
+	- Fix unbound-checkconf check for module config with dns64 module.
+
 6 October 2014: Wouter
 	- Fix #614: man page variable substitution bug.
 6 October 2014: Willem
